vendor/ocaml/testsuite/tests/typing-gadts/pr6934.ml
type nonrec t = A : t;;
[%%expect{|
Line _, characters 16-21:
Error: GADT case syntax cannot be used in a 'nonrec' block.
|}]

